--- a/app/css/main.css
+++ b/app/css/main.css
@@ -101,9 +101,6 @@ body {
   justify-content: center;
   width: 80%;
 }
-.sections_wrapper {
-  display: flex!;
-}
 .section1_ul {
   display: flex;
   flex-wrap: wrap;
@@ -125,4 +122,35 @@ body {
 }
 .section1_item_button {
   text-align: center;
+}
+.accordion {
+  min-height: 825px;
+  background-size: cover;
+}
+.accordion__back {
+  padding: 90px 0 90px 0;
+}
+.accordion__desc-head {
+  margin-bottom: 80px;
+}
+.accordion__desc-title {
+  text-align: center;
+}
+.accordion__desc-wrap {
+  margin-left: 80px;
+}
+.accordion__desc-item {
+  list-style-type: none;
+  margin-bottom: 40px;
+  cursor: pointer;
+}
+.accordion__desc-minhead {
+  text-decoration: none;
+  position: relative;
+}
+.accordion__description {
+  display: none;
+  margin-left: 30px;
+  max-width: 530px;
+  /*Чтобы секции не съезжали и содержимое тега не вылезало */
 }
