--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,3 +1,6 @@
+.leftpossections {
+  margin-left: 80px;
+}
 html,
 body {
   background-color: #fff;
@@ -77,9 +80,12 @@ body {
     float: none;
     width: 100%;
   }
+  .left-menu {
+    display: none;
+  }
 }
 .left-menu {
-  display: inline-flex;
+  position: absolute;
   vertical-align: top;
   min-width: 100px;
 }
@@ -97,9 +103,9 @@ body {
   color: #3ab3f8;
 }
 .sections {
-  display: inline-flex;
+  display: flex;
   justify-content: center;
-  width: 80%;
+  width: 100%;
 }
 .section1_ul {
   display: flex;
@@ -123,21 +129,11 @@ body {
 .section1_item_button {
   text-align: center;
 }
-.accordion {
-  min-height: 825px;
-  background-size: cover;
-}
-.accordion__back {
-  padding: 90px 0 90px 0;
-}
 .accordion__desc-head {
   margin-bottom: 80px;
 }
 .accordion__desc-title {
   text-align: center;
-}
-.accordion__desc-wrap {
-  margin-left: 80px;
 }
 .accordion__desc-item {
   list-style-type: none;
@@ -151,6 +147,41 @@ body {
 .accordion__description {
   display: none;
   margin-left: 30px;
-  max-width: 530px;
+  max-width: 700px;
   /*Чтобы секции не съезжали и содержимое тега не вылезало */
+}
+.tabs {
+  max-width: 700px;
+}
+.tabs__controls {
+  display: inline-flex;
+  justify-content: center;
+  width: 100%;
+  list-style-type: none;
+}
+.tabs__controls-item.active {
+  color: #fff;
+}
+.tabs__controls-item.active .tabs__control-link {
+  color: #ffffff;
+  background-color: #3ab3f8;
+}
+.tabs__control-link {
+  padding: 5px 30px 5px 30px;
+  margin: 0 10px 0 10px;
+  border: 1px solid #ffffff;
+  color: #3ab3f8;
+  width: 100px;
+  text-decoration: none;
+  line-height: 40px;
+}
+.tabs__control-link:hover {
+  border: 1px solid #3ab3f8;
+}
+.tabs__item {
+  list-style-type: none;
+  display: none;
+}
+.tabs__item.active {
+  display: block;
 }
