--- a/app/bundle.css
+++ b/app/bundle.css
@@ -275,7 +275,7 @@ body {
 }
 
 .accordeon {
-  width: 700px;
+  width: 690px;
 }
 
 .accordeon__list {
@@ -285,21 +285,53 @@ body {
 .accordeon__item,
 .accordeon__inner-item {
   list-style-type: none;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
-.accordeon__trigger,
-.accordeon__inner-link {
+.accordeon__trigger {
+  padding: 5px 30px 5px 30px;
   text-decoration: none;
   color: #363636;
+  border: 1px solid #ffffff;
 }
 
-.accordeon__trigger:hover,
+.accordeon__trigger:hover {
+  color: #3ab3f8;
+  border: 1px solid #3ab3f8;
+}
+
+.accordeon__trigger.active {
+  background-color: #3ab3f8;
+  color: #ffffff;
+  border: 1px solid #3ab3f8;
+}
+
+.accordeon__inner-link {
+  padding: 5px 30px 5px 30px;
+  text-decoration: none;
+  color: #363636;
+  border: 1px solid #ffffff;
+}
+
 .accordeon__inner-link:hover {
   color: #3ab3f8;
+  border: 1px solid #3ab3f8;
 }
 
-.accordeon__inner {
+.accordeon__inner-link.active {
+  background-color: #3ab3f8;
+  color: #ffffff;
+  border: 1px solid #3ab3f8;
+}
+
+.accordeon__inner,
+.accordeon__inner-content {
   display: none;
+}
+
+.accordeon__inner-content.active {
+  display: block;
 }
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
 
