--- a/app/bundle.css
+++ b/app/bundle.css
@@ -265,9 +265,15 @@ body {
   border: 1px solid #3ab3f8;
 }
 
+.tabs__list {
+  min-height: 100px;
+  position: relative;
+  background-color: #ffffff;
+}
+
 .tabs__item {
-  list-style-type: none;
   display: none;
+  list-style-type: none;
 }
 
 .tabs__item.active {
