--- a/app/bundle.css
+++ b/app/bundle.css
@@ -339,6 +339,51 @@ body {
 .accordeon__inner-content.active {
   display: block;
 }
+
+.slider {
+  position: relative;
+  width: 700px;
+}
+
+.slider__list-wrap {
+  background-color: green;
+  width: 200px;
+  height: 150px;
+  display: block;
+  margin-left: 0;
+  overflow: hidden;
+  position: relative;
+}
+
+.slider__list {
+  width: 2000px;
+  position: absolute;
+}
+
+.slider__item {
+  background-color: blue;
+  list-style-type: none;
+  display: inline-flex;
+  width: 200px;
+  height: 100px;
+}
+
+.slider__pic {
+  width: 200px;
+}
+
+.slider__controls-button {
+  position: absolute;
+  top: 60px;
+}
+
+.slider__controls-button-next {
+  right: -50px;
+}
+
+.slider__controls-button-prev {
+  left: -20px;
+}
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
 
 /**
